--- a/src/scss/identic/_colors.scss
+++ b/src/scss/identic/_colors.scss
@@ -1,4 +1,5 @@
+$white_main: #fff;
 $black_main: #181818;
-$black_hover: #343333;
-$white_main: #ffff;
-$scondary_black: #808080;
+$black_hover: #3b3b3b;
+$white_hover: #ebebeb;
+$secondary_black: #808080;
