--- a/scss/blocks/_gigachad.scss
+++ b/scss/blocks/_gigachad.scss
@@ -3,8 +3,8 @@
     
     &__content{
         display: flex;
-        flex-wrap: wrap;
         justify-content: flex-end;
+        flex-shrink: 1;
         
         }
     &__img{
